--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,9 +11,12 @@
   </head>
 
   <body>
-        <nav id="user-nav">
+    <nav id="user-nav">
       <% if user_signed_in? %>
         <div class="greet">Welcome <b> <%= current_user.name %>!</div>
+        <%= link_to "Food List", food_index_path%>
+        <%= link_to "Recipes", recipes_path %>
+        <%= link_to "Shopping List", general_shopping_list_index_path %>
         <%= button_to "Logout", destroy_user_session_path, method: :delete %>
       <% end %>
     </nav>
