--- a/app/views/food/index.html.erb
+++ b/app/views/food/index.html.erb
@@ -8,14 +8,13 @@
   <th>Actions</th>
 </tr>
 <% @food.each do |food| %>
-    <tr>
-      <td><%= food.name %></td>
-      <td><%= food.measurement_unit %></td>
-      <td><%= food.price %></td>
-      <td><%= food.quantity %></td>
-      <td><%= link_to 'Delete', food_path(food), method: :delete %></td>
-    </tr>
-
+  <tr>
+    <td><%= food.name %></td>
+    <td><%= food.measurement_unit %></td>
+    <td><%= food.price %></td>
+    <td><%= food.quantity %></td>
+    <td><%= button_to "Delete", food_path(food.id), method: :delete %></td>
+  </tr>
 <% end %>
 </table>
 <span class="msg success"><%= flash[:success] %></span>
