--- a/app/views/devise/confirmations/new.html.erb
+++ b/app/views/devise/confirmations/new.html.erb
@@ -1,4 +1,4 @@
-<h2>Resend confirmation instructions</h2>
+<h2>Resend confirmation instruction</h2>
 
 <%= form_for(resource, as: resource_name, url: confirmation_path(resource_name), html: { method: :post }) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
@@ -12,5 +12,4 @@
     <%= f.submit "Resend confirmation instructions" %>
   </div>
 <% end %>
-
 <%= render "devise/shared/links" %>
