--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,27 +1,21 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Recipes App</title>
+    <title>Recipe App</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
   </head>
 
   <body>
-    <nav id="user-nav">
-      <% if user_signed_in? %>
-        <div class="greet">Welcome <b> <%= current_user.name %>!</div>
-        <%= link_to "Food List", food_index_path%>
-        <%= link_to "Recipes", recipes_path %>
-        <%= link_to "Public Recipes", public_recipes_path %>
-        <%= link_to "Shopping List", general_shopping_list_index_path %>
-        <%= button_to "Logout", destroy_user_session_path, method: :delete %>
-      <% end %>
-    </nav>
+    <% if notice %>
+      <p class="flash notice"><%= notice %></p>
+    <% end %>
+    <% if alert %>
+      <p class="flash alert"><%= alert %></p>
+    <% end %>
     <%= yield %>
   </body>
 </html>
