--- a/app/views/public_recipes/index.html.erb
+++ b/app/views/public_recipes/index.html.erb
@@ -1,15 +1,27 @@
+<%= render "shared/nav", user: @user %>
 
+<section class="recipes public">
+  <% if @recipes.empty? %>
+    <p class="empty-recipes">No public recipes.</p>
+  <% else %>
+    <% @recipes.each do |recipe| %>
+      <div class="recipe-item">
+        <div class="item-container">
+          <div class="foodownercombo">
+            <h4 class="nav-links na-link"><%= link_to recipe.name, recipe_path(recipe) %></h4>
+            <p class="us-names">By:
+              <%= recipe.user.name %></p>
+          </div>
 
-  <% @recipes.includes(:foods, :user).each do |recipe| %>
-    <div class="card">
-      <div class="name">
-        <div><%= link_to recipe.name, recipe_path(recipe.id) %> </div>
-        <div>By <%= recipe.user.name %></div>
+          <div class="recipe-cost-no">
+            <h5>Total food items: <%= recipe.recipe_foods.count %> </h5>
+            <h5>Total price: $
+              <% total_price = recipe.recipe_foods.sum { |rf| rf.food.price * rf.quantity } %>
+              <%= total_price %>
+            </h5>
+          </div>
+        </div>
       </div>
-      <div class="detls"> 
-        <div>Total food items: <%= recipe.foods.count %></div>
-        <div>Total Price: <%= recipe.total_price %></div>
-      </div>
-    </div>
+    <% end %>
   <% end %>
-
+</section>
