--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -1,19 +1,32 @@
-<%= link_to "Add a new recipe", new_recipe_path, class: "buttn add-recipe-butt" %>
-<table class="table-list">
-  <tr>
-    <th>Recipe</th>
-    <th>Actions</th>
-  </tr>
-  <% @recipes.each do |recipe| %>
-    
-    <tr>
-    <td><%= link_to recipe.name, recipe_path(recipe.id) %></td>
-      <td><%= recipe.description %></td>
-      
-      
-      <td><%= button_to "Delete", recipe_path(recipe.id), method: :delete %></td>
-    </tr>
-  <% end %>
-</table>
-<span class="msg success"><%= flash[:success] %></span>
+<%= render "shared/nav", user: @user %>
 
+<h1 class="recipes_header">Recipes</h1>
+
+<div class="recipe">
+  <%= link_to "New recipe", new_recipe_path, class: "foods-add-button" %>
+  <br>
+  <br>
+  <div id="recipes">
+    <% @recipes.each do |recipe| %>
+
+      <div class="each-recipe">
+        <% if can? :read, recipe %>
+
+          <div class="recipe-name-and-button">
+            <h3 class="nav-links"><%= link_to "#{recipe.name}", recipe_path(recipe.id), class: "links" %></h3>
+            <% if can? :destroy, recipe %>
+              <%= button_to "Delete recipe",
+              recipe_path(recipe.id),
+              class: "recipe-delete-button",
+              method: :delete %>
+            <% end %>
+          </div>
+
+          <div class="desc-recipe">
+            <p><%= recipe.description %></p>
+          </div>
+        <% end %>
+      </div>
+    <% end %>
+  </div>
+</div>
