--- a/app/assets/stylesheets/devise.css
+++ b/app/assets/stylesheets/devise.css
@@ -12,7 +12,7 @@
     margin-bottom: 20px;
     width: 100%;
     padding: 10px;
-    background-color: #1e90ff;
+    background-color: #3dd6b0;
     color: white;
     border: none;
     border-radius: 5px;
@@ -22,7 +22,7 @@
   .devise-logout-button {
     width: 100%;
     padding: 10px;
-    background-color: #ff1001;
+    background-color: #463bd8;
     color: white;
     border: none;
     border-radius: 5px;
