--- a/app/assets/stylesheets/foods.css
+++ b/app/assets/stylesheets/foods.css
@@ -163,11 +163,11 @@ form:not(.edit_recipe) {
 }
 
 input:checked + .slider {
-  background-color: #83b4db;
+  background-color: #2196f3;
 }
 
 input:focus + .slider {
-  box-shadow: 0 0 1px #6b88a0;
+  box-shadow: 0 0 1px #2196f3;
 }
 
 input:checked + .slider::before {
